WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76862
REGRESSION: Downloaded file name fallback encodings are not set correctly
https://bugs.webkit.org/show_bug.cgi?id=76862
Summary
REGRESSION: Downloaded file name fallback encodings are not set correctly
Alexey Proskuryakov
Reported
2012-01-23 14:33:55 PST
As reported in
bug 67882 comment 32
, <
http://greenbytes.de/tech/tc2231/greek.asis#attwithisofnplain
> should be "failing" with its current expectations.
Attachments
proposed fix
(14.37 KB, patch)
2012-01-23 15:01 PST
,
Alexey Proskuryakov
abarth
: review+
ap
: commit-queue-
Details
Formatted Diff
Diff
patch for landing
(14.36 KB, patch)
2012-01-23 15:37 PST
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-01-23 15:01:54 PST
Created
attachment 123630
[details]
proposed fix
Adam Barth
Comment 2
2012-01-23 15:11:49 PST
Comment on
attachment 123630
[details]
proposed fix Thanks.
Alexey Proskuryakov
Comment 3
2012-01-23 15:34:25 PST
Comment on
attachment 123630
[details]
proposed fix Actually, should ISO-8859-1 a different default in DumpRenderTree.
Alexey Proskuryakov
Comment 4
2012-01-23 15:37:39 PST
Created
attachment 123638
[details]
patch for landing
WebKit Review Bot
Comment 5
2012-01-23 22:43:44 PST
Comment on
attachment 123638
[details]
patch for landing Clearing flags on attachment: 123638 Committed
r105695
: <
http://trac.webkit.org/changeset/105695
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug