REGRESSION: Downloaded file name fallback encodings are not set correctly https://bugs.webkit.org/show_bug.cgi?id=76862

Reviewed by Adam Barth.

Source/WebCore:

Tests: http/tests/download/default-encoding.html
       http/tests/download/form-submission-result.html
       http/tests/download/inherited-encoding.html
       http/tests/download/literal-utf-8.html

* loader/DocumentWriter.cpp:
* loader/DocumentWriter.h:
Removed deprecatedFrameEncoding. Due to changes in Document::encoding behavior, it can now
be used in its place.

* loader/FrameLoader.cpp: (WebCore::FrameLoader::addExtraFieldsToRequest): Instead of hunting
down a correct loader (and active one is not always correct any more), just use opening document's
encoding.

LayoutTests:

* http/tests/download/default-encoding-expected.txt: Added.
* http/tests/download/default-encoding.html: Added.
* http/tests/download/inherited-encoding-expected.txt: Added.
* http/tests/download/inherited-encoding.html: Added.
* http/tests/download/literal-utf-8-expected.txt: Added.
* http/tests/download/literal-utf-8.html: Added.
* http/tests/download/resources/literal-koi8-r.php: Added.
* http/tests/download/resources/literal-utf-8.php: Added.
* http/tests/download/inherited-encoding-form-submission-result-expected.txt: Added.
* http/tests/download/inherited-encoding-form-submission-result.html: Added.


Canonical link: https://commits.webkit.org/93727@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105695 268f45cc-cd09-0410-ab3c-d52691b4dbfc